Fix app menu searchfield alignment issues in Firefox

--- a/src/components/applicationmenu/_applicationmenu-uplift.scss
+++ b/src/components/applicationmenu/_applicationmenu-uplift.scss
@@ -27,7 +27,6 @@
 
       &::-moz-placeholder {
         color: $uplift-appmenu-searchfield-placeholder-color;
-        line-height: normal;
         opacity: 1;
       }
 
